Add 13m closure solution

--- a/1-exercise-solutions/lesson-13/13m.md
+++ b/1-exercise-solutions/lesson-13/13m.md
@@ -1,1 +1,7 @@
+### Solution:
 https://github.com/SuperSimpleDev/javascript-course/pull/14/files
+
+---
+
+### More advanced solution that uses a closure:
+https://github.com/SuperSimpleDev/javascript-course/pull/15/files
